--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 notebook = "^6.4.12"
+matplotlib = "^3.6.0"
+pandas = "^1.5.0"
+py7zr = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
