--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ executing==1.1.0
 fastjsonschema==2.16.2
 fonttools==4.37.4
 graphviz==0.20.1
-inflate64==0.3.0
+inflate64==0.3.1
 ipykernel==6.16.0
 ipython==8.5.0
 ipython-genutils==0.2.0
@@ -30,8 +30,8 @@ joblib==1.2.0
 jsonschema==4.16.0
 jupyter==1.0.0
 jupyter-console==6.4.4
-jupyter-core==4.11.1
 jupyter_client==7.3.5
+jupyter_core==5.1.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.3
 kiwisolver==1.4.4
@@ -50,14 +50,17 @@ packaging==21.3
 pandas==1.5.0
 pandocfilters==1.5.0
 parso==0.8.3
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.2.0
+Pillow==9.3.0
+platformdirs==2.6.0
 plotly==5.10.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
 psutil==5.9.2
+ptyprocess==0.7.0
 pure-eval==0.2.2
-py7zr==0.20.0
+py7zr==0.20.2
 pybcj==1.0.1
 pycparser==2.21
 pycryptodomex==3.15.0
