--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,31 @@ dependencies = [
 
 [project.optional-dependencies]
 # Dev dependencies.
-dev = []
+dev = [
+    "pre-commit>=2.20.0",
+    "black>=22.12.0",
+    "flake8>=6.0.0",
+    "reorder-python-imports>=3.9.0",
+    "pyupgrade>=3.3.1",
+]
 # Test dependencies.
 test = []
 # Doc dependencies.
 doc = []
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$' # All Python files
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
