--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,24 @@
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+charset = utf-8
+
+# 4 space indentation
+[*.{py}]
 indent_style = space
 indent_size = 4
-insert_final_newline = true
+
+# 2 space indentation
+[*.{json,y{a,}ml,html,cwl}]
+indent_style = space
+indent_size = 2
+
+[*.{md,Rmd,rst}]
 trim_trailing_whitespace = false
-end_of_line = lf
-charset = utf-8
+indent_style = space
+indent_size = 2
