--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,6 @@ classifiers = [
 python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-cov = "^4.1.0"
 taskipy = "^1.12.0"
 scikit-learn = "^1.3.0"
 catboost = "^1.2"
@@ -26,8 +24,12 @@ isort = "^5.12.0"
 flake8 = "^6.1.0"
 pre-commit = "^3.3.3"
 pyupgrade = "^3.10.1"
-pytest-mock = "^3.11.1"
 bandit = "^1.7.5"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core"]
