--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,9 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: jsppass
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: jsp-db
     ports:
       - "5432:5432"
     volumes:
-      - ./data:/home/data # local-machine:container-machine
-
-  pgadmin:
-    container_name: pgadmin4-container
-    image: dpage/pgadmin4:latest
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: jsppass
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "8080:80"
-    volumes:
-      - ./data:/home/data # local-machine:container-machine
-
-volumes:
-  data:
+      - ./jsp/data_sources:/home/data_sources # local-machine:container-machine
