--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pre-commit = "^3.3.3"
 pyupgrade = "^3.10.1"
 sqlalchemy = "^2.0.20"
 psycopg2-binary = "^2.9.7"
+typer = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
