--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pyupgrade = "^3.10.1"
 sqlalchemy = "^2.0.20"
 psycopg2-binary = "^2.9.7"
 typer = "^0.9.0"
+notebook = "^7.0.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
