--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,25 +19,25 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.12.2"
-scikit-learn = "^1.4.0"
-catboost = "^1.2.2"
-pandas = "^2.2.2"
-black = "^23.12.1"
+scikit-learn = "^1.4.1.post1"
+catboost = "^1.2.3"
+pandas = "^2.2.1"
+black = "^24.2.0"
 isort = "^5.13.2"
-flake8 = "^6.1.0"
-pre-commit = "^3.6.1"
-pyupgrade = "^3.15.0"
-sqlalchemy = "^2.0.25"
+flake8 = "^7.0.0"
+pre-commit = "^3.6.2"
+pyupgrade = "^3.15.1"
+sqlalchemy = "^2.0.27"
 psycopg2-binary = "^2.9.9"
 typer = "^0.9.0"
-notebook = "^7.0.8"
+notebook = "^7.1.1"
 pillow = "^10.2.0"
 streamlit = "^1.31.1"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.4.0"
+pytest = "^8.0.2"
 pytest-cov = "^4.1.0"
-pytest-mock = "^3.11.1"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
