--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "JSP"
-version = "0.1.0"
+version = "1.0.0"
 description = "Predict the salary of any UK job ad based on its contents."
-authors = ["drigols <drigols.creative@gmail.com>"]
+authors = ["Rodrigo Leite <rodrigols89.inbox@gmail.com>"]
 license = "MIT"
 packages = [{ include = "jsp" }]
 readme = "README.md"
